--- a/src/app/sudoku/sudoku.component.html
+++ b/src/app/sudoku/sudoku.component.html
@@ -1,7 +1,10 @@
 <div class="sudoku-board">
-  <div *ngFor="let row of board; let rowIndex = index" class="sudoku-row">
+  <div
+    *ngFor="let row of board; let rowIndex = index; trackBy: trackByIndex"
+    class="sudoku-row"
+  >
     <input
-      *ngFor="let cell of row; let colIndex = index"
+      *ngFor="let cell of row; let colIndex = index; trackBy: trackByIndex"
       type="number"
       [ngModel]="cell === 0 ? '' : cell"
       (ngModelChange)="onInputChange(rowIndex, colIndex, $event)"
